[package]
name = "peepers"
version = "0.1.0"
edition = "2021"
authors = ["sihao <sihao.dev@gmail.com>"]
license = "MIT"
description = "CLI tool to view and query tabular data formats"
readme = "README.md"
homepage = "https://github.com/sihaotan4/peepers"
repository = "https://github.com/sihaotan4/peepers"
keywords = ["cli", "sql", "csv", "parquet"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
crossterm = "0.27.0"
polars = { version = "0.36.2", features = ["lazy", "parquet", "fmt", "polars-io", "streaming"] }
polars-sql = "0.36.2"
rand = "0.8.5"
